# security_camera

./: .gitignore  README.md  pyproject.toml
security_camera/: main.py
