[tool.poetry]
name = "security-camera"
version = "0.1.0"
description = ""
authors = ["jr19f <jr19f@telematik-zentrum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
ultralytics = "^8.1.47"
pytapo = "^3.3.19"
telethon = "^1.34.0"

[tool.poetry.scripts]
app = "security_camera.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
